log
Fri Apr 17 06:38:35 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
97fbcd0
Fri Apr 17 06:38:58 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
7442aca
Fri Apr 17 06:39:03 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
154ea9b
Fri Apr 17 07:01:36 PM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:19: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   73 |     int pos = key % map->size;
      |                   ^ ~~~~~~~~~
      |                        |
      |                        long int
1c5a1fd
Fri Apr 17 07:04:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:20: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   73 |     long pos = key % map->size;
      |                    ^ ~~~~~~~~~
      |                         |
      |                         long int
fb50b19
Fri Apr 17 07:06:01 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c0043dd
Fri Apr 17 07:08:04 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b0c3f9a
Fri Apr 17 07:08:45 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
5bd13e6
Fri Apr 17 07:09:57 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
6d7590a
Fri Apr 17 07:14:22 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
fe1d878
Fri Apr 17 07:15:03 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c053d2b
Fri Apr 17 07:15:35 PM UTC 2026: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
654b891
Fri Apr 17 07:17:12 PM UTC 2026: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
886a854
Fri Apr 17 07:17:29 PM UTC 2026: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|7
total_score: 0/60
4b59196
Fri Apr 17 07:19:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:78:53: error: expected ‘)’ before ‘{’ token
   78 |         if(is_equal(map->buckets[pos]->key,key) == 1{
      |           ~                                         ^
      |                                                     )
hashmap.c:83:5: error: expected expression before ‘}’ token
   83 |     }
      |     ^
31e506b
Fri Apr 17 07:19:27 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
62405e0
Fri Apr 17 07:21:03 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8cfa00e
Fri Apr 17 07:21:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
82da920
Fri Apr 17 07:22:14 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
3898346
Sun Apr 19 05:11:04 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:19: error: assignment to ‘Pair **’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   50 |     mapa->buckets = -1;
      |                   ^
hashmap.c:52:19: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   52 |     mapa->current = NULL;
      |                   ^
3bcd85e
Sun Apr 19 05:15:41 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
fbe8959
Sun Apr 19 05:17:20 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|6
total_score: 10/60
0fba77e
Sun Apr 19 05:18:49 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 15/60
b94b17c
Sun Apr 19 05:40:49 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:12: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   74 |         if(pos = aux)return;
      |            ^~~
hashmap.c:76:17: error: implicit declaration of function ‘creatPair’; did you mean ‘createPair’? [-Wimplicit-function-declaration]
   76 |     Pair* par = creatPair(key,value);
      |                 ^~~~~~~~~
      |                 createPair
hashmap.c:76:17: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
hashmap.c:78:5: error: ‘size’ undeclared (first use in this function)
   78 |     size++;
      |     ^~~~
hashmap.c:78:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
fb0462e
Sun Apr 19 05:41:52 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 30/60
509ae86
Sun Apr 19 05:46:08 PM UTC 2026: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|2
total_score: 40/60
6efaac5
